--- a/src/pages/onboard/storytelling/Step1/step1.module.css
+++ b/src/pages/onboard/storytelling/Step1/step1.module.css
@@ -36,7 +36,7 @@
 
 /* HUND I MIDTEN */
 .dogCenter {
-  position: fixed;
+  position: absolute;
   top: 45%;                 /* stabil placering */
   left: 50%;
   transform: translate(-50%, -50%);
