--- a/src/pages/onboard/storytelling/Step2/step2.module.css
+++ b/src/pages/onboard/storytelling/Step2/step2.module.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid greenyellow;
+
 }
 .section {
   height: 100vh;
@@ -82,8 +82,8 @@
   color: white;
   opacity: 0;
   position: absolute;
-  top: 60%;
-  left: 45%;
+  top: 50%;
+  left: 50%;
   font-size: 3rem;
   font-family: var(--font-knewave);
 }
@@ -166,22 +166,74 @@ left: -150%;
 }
 
 .outro{
-opacity: 0;
+
 }
 
 .outro h2{
+  color: white;
+  font-size: 3.5rem;
+  margin-bottom: 20px;
+  font-family: var(--font-knewave);
+text-transform: uppercase;
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+.outroHeading {
+  color: white;
+  font-size: 2.5rem;
+  font-family: var(--font-knewave);
+  text-align: center;
+}
 
+.outroHeadingRed {
+  color: #ff4b4b; /* eller var(--brand-red) hvis du har sådan én */
+  font-size: 2rem;
 }
 
 .outro p{
-
-}
-.doggie {
-  position: absolute;
-  top: 50%;
-  left: 80%;
-  width: 250px;
-  height: auto;
-  transform: translate(-50%, -50%);
+  color: white;
   opacity: 1;
+  font-family: var(--font-hel-light);
+  font-weight: lighter;
+  font-size: 1.5rem;
+}
+
+
+.outro {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+
+.dogRow {
+  display: flex;
+  gap: 20px;
+  margin-top: 24px;
+  align-items: end;
+}
+
+.doggie1{
+  width: 120px;
+  height: auto;
+}
+.doggie2{
+  width: 170px;
+  height: auto;
+}
+.doggie3{
+  width: 220px;
+  height: auto;
+}
+.doggie4{
+  width: 280px;
+  height: auto;
+}
+.doggie5{
+  width: 380px;
+  height: auto;
 }
