--- a/src/pages/onboard/storytelling/Step4/step4.module.css
+++ b/src/pages/onboard/storytelling/Step4/step4.module.css
@@ -24,8 +24,10 @@
   pointer-events: auto; /* så vi kan klikke på tabs */
 }
 
-/* del1.svg – første scene */
+/* del1.svg + del2.svg + del3-tekst – ligger ovenpå hinanden */
 .mainGraphic {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -82,10 +84,10 @@
 /* usynligt klikfelt oven på X i højre hjørne */
 .closeHitArea {
   position: absolute;
-  top: 1%;
+  top: 13%;
   right: 4%;
   width: 10%;
-  height: 6%;
+  height: 5%;
   background: transparent;
   border: none;
   cursor: pointer;
@@ -104,4 +106,29 @@
   display: block;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* ---------- DEL 3 ikoner nederst ---------- */
+
+.del3Icon {
+  position: absolute;
+  bottom: 7%;     /* hvor højt oppe de står – finjustér efter behov */
+  width: 22%;
+  height: auto;
+  object-fit: contain;
+}
+
+/* midten – huset */
+.del3IconHjem {
+  left: 39%;
+}
+
+/* venstre – hund + kat */
+.del3IconDyr {
+  left: 9%;
+}
+
+/* højre – arbejde / skrivebord */
+.del3IconArbejde {
+  right: 8%;
 }
